// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderInlineColor renders 0 1`] = `
Array [
  .c0 {
  border-inline-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineColor renders function 1`] = `
Array [
  .c0 {
  border-inline-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineColor renders invalid theme path 1`] = `
Array [
  .c0 {
  border-inline-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineColor renders negative number 1`] = `
Array [
  .c0 {
  border-inline-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineColor renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-inline-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-color: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-inline-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-inline-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineColor renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-inline-color: July;
}

@media May {
  .c0 {
    border-inline-color: August;
  }
}

@media April {
  .c0 {
    border-inline-color: September;
  }
}

@media January {
  .c0 {
    border-inline-color: November;
  }
}

@media April {
  .c0 {
    border-inline-color: August;
  }
}

@media June {
  .c0 {
    border-inline-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: July;
}

@media May {
  .c0 {
    border-inline-color: August;
  }
}

@media April {
  .c0 {
    border-inline-color: September;
  }
}

@media January {
  .c0 {
    border-inline-color: November;
  }
}

@media April {
  .c0 {
    border-inline-color: August;
  }
}

@media June {
  .c0 {
    border-inline-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-color: November;
  }
}

@media April {
  .c0 {
    border-inline-color: January;
  }
}

@media January {
  .c0 {
    border-inline-color: December;
  }
}

@media April {
  .c0 {
    border-inline-color: April;
  }
}

@media June {
  .c0 {
    border-inline-color: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-color: November;
  }
}

@media April {
  .c0 {
    border-inline-color: January;
  }
}

@media January {
  .c0 {
    border-inline-color: December;
  }
}

@media April {
  .c0 {
    border-inline-color: April;
  }
}

@media June {
  .c0 {
    border-inline-color: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineColor renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-inline-color: July;
  }
}

@media April {
  .c0 {
    border-inline-color: August;
  }
}

@media January {
  .c0 {
    border-inline-color: September;
  }
}

@media April {
  .c0 {
    border-inline-color: November;
  }
}

@media June {
  .c0 {
    border-inline-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-inline-color: July;
  }
}

@media April {
  .c0 {
    border-inline-color: August;
  }
}

@media January {
  .c0 {
    border-inline-color: September;
  }
}

@media April {
  .c0 {
    border-inline-color: November;
  }
}

@media June {
  .c0 {
    border-inline-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-color: January;
  }
}

@media April {
  .c0 {
    border-inline-color: December;
  }
}

@media January {
  .c0 {
    border-inline-color: April;
  }
}

@media April {
  .c0 {
    border-inline-color: May;
  }
}

@media June {
  .c0 {
    border-inline-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-color: January;
  }
}

@media April {
  .c0 {
    border-inline-color: December;
  }
}

@media January {
  .c0 {
    border-inline-color: April;
  }
}

@media April {
  .c0 {
    border-inline-color: May;
  }
}

@media June {
  .c0 {
    border-inline-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineColor renders postitive number 1`] = `
Array [
  .c0 {
  border-inline-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineColor renders string 1`] = `
Array [
  .c0 {
  border-inline-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineColor renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderInlineColor renders valid theme path 1`] = `
Array [
  .c0 {
  border-inline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
